--- a/app/src/main/res/layout/fragment_cuahang.xml
+++ b/app/src/main/res/layout/fragment_cuahang.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent">
+   <androidx.appcompat.widget.SearchView
+       android:id="@+id/seach_sp_KH"
+       android:layout_width="match_parent"
+       android:layout_height="50dp"/>
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="0dp"
