--- a/app/src/main/res/layout/dialog__doi_mat_khau.xml
+++ b/app/src/main/res/layout/dialog__doi_mat_khau.xml
@@ -50,6 +50,7 @@
                 android:background="@drawable/shape_edittext"
                 android:hint="Nhập mật khẩu mới"
                 android:padding="10dp"
+                android:inputType="textPassword"
                 android:textColor="#E6903B"
                 android:textColorHint="#E6903B" />
 
@@ -62,6 +63,7 @@
                 android:hint="Xác nhận mật khẩu"
                 android:padding="10dp"
                 android:textColor="#E6903B"
+                android:inputType="textPassword"
                 android:textColorHint="#E6903B" />
 
             <androidx.appcompat.widget.AppCompatButton
