--- a/app/src/main/res/layout/dialog_nhanvien.xml
+++ b/app/src/main/res/layout/dialog_nhanvien.xml
@@ -15,17 +15,7 @@
         android:textColor="#E6903B"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập Email"
-        android:padding="10dp" />
-
-    <EditText
-        android:id="@+id/edt_matKhau"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="10dp"
-        android:textColor="#E6903B"
-        android:inputType="textPassword"
-        android:background="@drawable/shape_edittext"
-        android:hint="Nhập mật khẩu"
+        android:textColorHint="@color/vang"
         android:padding="10dp" />
 
     <EditText
@@ -34,6 +24,7 @@
         android:layout_height="50dp"
         android:layout_margin="10dp"
         android:textColor="#E6903B"
+        android:textColorHint="@color/vang"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập họ tên"
         android:padding="10dp" />
@@ -45,6 +36,7 @@
         android:layout_margin="10dp"
         android:background="@drawable/shape_edittext"
         android:hint="Nhập số điện thoại"
+        android:textColorHint="@color/vang"
         android:maxLength="10"
         android:textColor="#E6903B"
         android:padding="10dp" />
