--- a/app/src/main/res/layout/activity_show_more.xml
+++ b/app/src/main/res/layout/activity_show_more.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/white"
+        android:background="@color/vang"
         android:padding="10dp">
 
         <TextView
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="sdfs"
-            android:textColor="#E6903B"
+            android:textColor="#FFFFFF"
             android:textSize="30dp"
             android:textStyle="bold" />
 
@@ -38,7 +38,7 @@
         android:hint="Nhập tên sản phẩm cần tìm"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="15dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_list_sanPham_more"
