--- a/app/src/main/res/layout/fragment_cuahang.xml
+++ b/app/src/main/res/layout/fragment_cuahang.xml
@@ -7,6 +7,7 @@
    <androidx.appcompat.widget.SearchView
        android:id="@+id/seach_Hang_KH"
        android:layout_width="match_parent"
+       android:layout_marginBottom="15dp"
        android:layout_height="50dp"/>
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
