--- a/app/src/main/res/layout/activity_sanpham_show.xml
+++ b/app/src/main/res/layout/activity_sanpham_show.xml
@@ -21,14 +21,14 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="wrap_content"
                 app:cardCornerRadius="15dp">
 
                 <ImageView
                     android:id="@+id/imv_anh_sp_lon"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
+                    android:layout_height="500dp"
+
                     android:src="#E6903B" />
             </androidx.cardview.widget.CardView>
 
