--- a/app/src/main/res/layout/activity_show_more.xml
+++ b/app/src/main/res/layout/activity_show_more.xml
@@ -30,7 +30,7 @@
             android:layout_height="40dp"
             android:layout_gravity="right"
             android:scaleType="centerCrop"
-            android:src="@drawable/cancel" />
+            android:src="@drawable/xmark" />
     </LinearLayout>
 
     <androidx.appcompat.widget.SearchView
