--- a/app/src/main/res/layout/activity_sanpham_show.xml
+++ b/app/src/main/res/layout/activity_sanpham_show.xml
@@ -87,7 +87,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -96,8 +98,8 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/bnt_tru_soluong"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:background="#FEC389"
                     android:text="-"
                     android:textColor="@color/white"
@@ -109,12 +111,14 @@
                     android:layout_width="70dp"
                     android:layout_height="40dp"
                     android:inputType="number"
+                    android:textColor="@color/vang"
+                    android:gravity="center"
                     android:text="0" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/bnt_cong_soluong"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:background="#FEC389"
                     android:text="+"
                     android:textColor="@color/white"
