--- a/app/src/main/res/layout/dialog_naptien.xml
+++ b/app/src/main/res/layout/dialog_naptien.xml
@@ -9,14 +9,46 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Thêm nhân viên"
+    android:text="Nạp tiền"
     android:textColor="#FFC107"
     android:textStyle="bold"
     android:textSize="30dp"
     android:layout_gravity="center"
     android:layout_margin="10dp"/>
+   <LinearLayout
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       android:padding="10dp"
+       >
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Thông tin tài khoản Admin: "
+           android:textSize="20dp"
+           android:textStyle="bold"
+           android:textColor="#FF5722"
+           />
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Tên chủ ví: Quàng Ngọc Thủy"
+           android:textColor="#FF5722"
+           />
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Số tài khoản: 12345678910"
+           android:textColor="#FF5722"/>
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Nội dung chuyển : Email + Số điện thoại"
+           android:textColor="#FF5722"
+           />
+   </LinearLayout>
     <EditText
-        android:id="@+id/edt_email"
+        android:id="@+id/edt_email_naptien"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="10dp"
@@ -26,30 +58,41 @@
         android:textColorHint="@color/vang"
         android:padding="10dp" />
 
-    <EditText
-        android:id="@+id/edt_hoTen"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="10dp"
-        android:textColor="#E6903B"
-        android:textColorHint="@color/vang"
-        android:background="@drawable/shape_edittext"
-        android:hint="Nhập họ tên"
-        android:padding="10dp" />
+
 
     <EditText
-        android:id="@+id/edt_sdt"
+        android:id="@+id/edt_sotien"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="10dp"
         android:background="@drawable/shape_edittext"
-        android:hint="Nhập số điện thoại"
+        android:hint="Nhập số tiền cần nạp"
         android:textColorHint="@color/vang"
         android:maxLength="10"
         android:inputType="number"
         android:textColor="#E6903B"
         android:padding="10dp" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ảnh chụp màn hình giao dịch"
+        android:layout_gravity="center"
+        android:textColor="@color/cam"
+        />
+    <ImageView
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/baseline_crop_original_24"
+        android:layout_marginBottom="10px"
+        android:id="@+id/imv_anhchupmanhinh"/>
+</LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,7 +106,7 @@
             android:layout_margin="10dp"
             android:background="@drawable/shape_btn"
             android:padding="10dp"
-            android:text="Lưu"
+            android:text="Yêu cầu"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
