--- a/app/src/main/res/layout/item_lichsugg.xml
+++ b/app/src/main/res/layout/item_lichsugg.xml
@@ -47,26 +47,52 @@
             />
     </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thời gian:"
-            android:textColor="@color/black"
 
-            />
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
+        >
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="MGG"
-            android:textColor="#FF1100"
-            android:textStyle="bold"
-            android:id="@+id/tv_thoigiangg"
-            />
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Trạng thái:"
+                android:textColor="@color/black"
+
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Trạng thái:"
+                android:textColor="@color/black"
+                android:id="@+id/tv_trangThai_gg"
+                />
+        </LinearLayout>
+       <LinearLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="end"
+           >
+           <TextView
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:text="Thời gian:"
+               android:layout_weight="1"
+               android:textColor="@color/black"
+
+               />
+           <TextView
+               android:layout_marginLeft="10dp"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="MGG"
+               android:textColor="#FF1100"
+               android:textStyle="bold"
+               android:id="@+id/tv_thoigiangg"
+               />
+       </LinearLayout>
     </LinearLayout>
 
 
