--- a/app/src/main/res/layout/activity_thongtintaikhoan.xml
+++ b/app/src/main/res/layout/activity_thongtintaikhoan.xml
@@ -50,8 +50,10 @@
                         android:id="@+id/imv_updatethongtin"/>
                 </LinearLayout>
                <LinearLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content">
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/ll_naptien"
+                   >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
