--- a/app/src/main/res/layout/dialog_lichsu.xml
+++ b/app/src/main/res/layout/dialog_lichsu.xml
@@ -5,11 +5,13 @@
     android:layout_width="match_parent"
     app:cardCornerRadius="10dp"
     android:backgroundTint="@color/white"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    >
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="600dp"
+        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,9 +23,19 @@
             android:textStyle="bold"/>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:defaultFocusHighlightEnabled="true"
             android:id="@+id/rcv_list_lichsu"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="List đang trống"
+            android:textSize="25dp"
+            android:textColor="#7A7A7A"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:id="@+id/tv_thongbao_rong"
+            />
 
     </LinearLayout>
 
