--- a/app/src/main/res/layout/item_chodon.xml
+++ b/app/src/main/res/layout/item_chodon.xml
@@ -55,13 +55,25 @@
 
             </LinearLayout>
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:text="Ngày"
-                android:textColor="@color/black"
-                android:id="@+id/tv_ngay_mua"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Ngày"
+                    android:textColor="@color/black"
+                    android:id="@+id/tv_ngay_mua"
+                    android:layout_weight="1" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Người duyệt"
+                    android:textColor="@color/black"
+                    android:id="@+id/tv_nguoiduyet"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
